<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweeter</string>
    <string name="login_label">Login to Twitter</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="tweet">Tweet</string>
    <string name="reply">Reply</string>
    <string name="reply_hint">Tweet your reply</string>

    <string name="content_description">Content description</string>
    <string name="compose">What\'s happening?</string>
    <string name="name">John Appleseed</string>
    <string name="screen_name">\@jappleseed</string>
    <string name="reply_to">Replying to \@jappleseed</string>
    <string name="created_at">8 min. ago</string>
    <string name="text">Tweet content\.\.\.</string>
    <string name="counter">128</string>

</resources>