<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.ReplyFragment">

    <TextView
        android:id="@+id/tvReplyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/reply_to" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReplyTo"
        android:layout_margin="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="140">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/reply_hint"
            android:inputType="textMultiLine"
            android:minLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:radius="8dp"
        android:text="@string/reply"
        android:textColor="@color/textColorPrimary" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

</RelativeLayout>